Fixed image width issue on mobile

--- a/src/sass/components/_wray-gal.scss
+++ b/src/sass/components/_wray-gal.scss
@@ -115,6 +115,7 @@
   img {
     margin: 0 auto;
     max-height: 100vh;
+    max-width: 100%;
   }
 }
 
